tests/fixtures/failing/std_result_self_apply.wm
from "std/result" import { map };

export let selfApply = () => {
  map(map, IOk(1))
};
